# churnops

./: .dvcignore  .gitignore  README.md  business-and-ml-problem.md  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb
