[tool.poetry]
name = "churnops"
version = "0.1.0"
description = "End-to-end MLOps for customer churn prediction"
authors = ["AAkil98"]
readme = "README.md"
packages = [{include = "churnops", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.3"
xgboost = "^2.0"
lightgbm = "^4.0"
optuna = "^3.4"
mlflow = "^2.8"
prefect = "^2.14"
fastapi = "^0.104"
uvicorn = "^0.24"
evidently = "^0.4"
shap = "^0.43"
streamlit = "^1.28"
dvc = "^3.40"
pyyaml = "^6.0"
pytest = "^7.4"
ruff = "^0.1"
black = "^23.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests_*.py"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
